<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="48dp"
            android:paddingBottom="32dp">

            <!-- Title -->
            <TextView
                android:id="@+id/tvRegisterTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dktk"
                android:textAlignment="center"
                android:textSize="31sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:id="@+id/tvRegisterSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vld"
                android:textAlignment="center"
                android:layout_marginBottom="32dp"
                android:lineSpacingExtra="10dp"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/dn"
                android:inputType="text"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:minHeight="48dp" />
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/mk"
                android:inputType="textPassword"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:minHeight="48dp" />
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:minHeight="48dp" />
            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/sdt"
                android:inputType="phone"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:minHeight="48dp" />
            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:hint="@string/dc"
                android:inputType="textMultiLine"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:minHeight="96dp"
                android:gravity="top"/>
            <androidx.appcompat.widget.AppCompatButton
                style="@android:style/Widget.Button"
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dk"
                android:background="@drawable/orange_bg"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="24dp"/>
            <TextView
                android:id="@+id/tvLoginLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dctk"
                android:textAlignment="center"
                android:lineSpacingExtra="18sp"
                android:textSize="16sp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
