<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ForgotActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="48dp"
            android:paddingBottom="32dp">
            <TextView
                android:id="@+id/tvForgotPasswordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qmk"
                android:textAlignment="center"
                android:textSize="31sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:id="@+id/tvForgotPasswordSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vlnm"
                android:textAlignment="center"
                android:layout_marginBottom="32dp"
                android:lineSpacingExtra="10dp"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/etForgotEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:hint="@string/emailcb"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:minHeight="48dp" />
            <androidx.appcompat.widget.AppCompatButton
                style="@android:style/Widget.Button"
                android:id="@+id/btnSendResetLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gui"
                android:background="@drawable/orange_bg"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="24dp"/>
            <TextView
                android:id="@+id/tvBackToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qldn"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"/> <!-- Bạn có thể đổi màu tùy ý -->

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
