<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SplashActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:srcCompat="@drawable/splash_pic"
                android:layout_marginStart="-32dp"
                android:layout_marginEnd="-32dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_splash"
                android:textAlignment="center"
                android:textSize="31sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_splash"
                android:textAlignment="center"
                android:layout_marginTop="18sp"
                android:lineSpacingExtra="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="Email Hoặc Tên tài khoản"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext_backgroud"
                android:padding="12dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Mật khẩu"
                android:inputType="textPassword"
                android:background="@drawable/edittext_backgroud"
                android:padding="12dp"
                android:textSize="16sp"/>
            <androidx.appcompat.widget.AppCompatButton
                style="@android:style/Widget.Button"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:id="@+id/startBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Đăng nhập"
                android:background="@drawable/orange_bg"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Quên mật khẩu?"
                android:textAlignment="center"
                android:lineSpacingExtra="18sp"
                android:layout_marginBottom="32dp"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textAlignment="center"
                android:lineSpacingExtra="18sp"
                android:layout_marginBottom="32dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>